--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -1,26 +1,30 @@
 :root {
-    --light-hl-0: #AF00DB;
-    --dark-hl-0: #C586C0;
-    --light-hl-1: #000000;
-    --dark-hl-1: #D4D4D4;
-    --light-hl-2: #0000FF;
-    --dark-hl-2: #569CD6;
-    --light-hl-3: #001080;
-    --dark-hl-3: #9CDCFE;
-    --light-hl-4: #A31515;
-    --dark-hl-4: #CE9178;
-    --light-hl-5: #008000;
-    --dark-hl-5: #6A9955;
-    --light-hl-6: #0070C1;
-    --dark-hl-6: #4FC1FF;
-    --light-hl-7: #795E26;
-    --dark-hl-7: #DCDCAA;
-    --light-hl-8: #098658;
-    --dark-hl-8: #B5CEA8;
-    --light-hl-9: #267F99;
-    --dark-hl-9: #4EC9B0;
-    --light-code-background: #FFFFFF;
-    --dark-code-background: #1E1E1E;
+    --light-hl-0: #8839EF;
+    --dark-hl-0: #CBA6F7;
+    --light-hl-1: #4C4F69;
+    --dark-hl-1: #CDD6F4;
+    --light-hl-2: #D20F39;
+    --dark-hl-2: #F38BA8;
+    --light-hl-3: #40A02B;
+    --dark-hl-3: #A6E3A1;
+    --light-hl-4: #7C7F93;
+    --dark-hl-4: #9399B2;
+    --light-hl-5: #179299;
+    --dark-hl-5: #94E2D5;
+    --light-hl-6: #1E66F5;
+    --dark-hl-6: #89B4FA;
+    --light-hl-7: #04A5E5;
+    --dark-hl-7: #89DCEB;
+    --light-hl-8: #FE640B;
+    --dark-hl-8: #FAB387;
+    --light-hl-9: #9CA0B0;
+    --dark-hl-9: #6C7086;
+    --light-hl-10: #E64553;
+    --dark-hl-10: #EBA0AC;
+    --light-hl-11: #DF8E1D;
+    --dark-hl-11: #F9E2AF;
+    --light-code-background: #eff1f5;
+    --dark-code-background: #1e1e2e;
 }
 
 @media (prefers-color-scheme: light) { :root {
@@ -34,6 +38,8 @@
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
     --code-background: var(--light-code-background);
 } }
 
@@ -48,6 +54,8 @@
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
     --code-background: var(--dark-code-background);
 } }
 
@@ -62,6 +70,8 @@
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
     --code-background: var(--light-code-background);
 }
 
@@ -76,6 +86,8 @@
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
     --code-background: var(--dark-code-background);
 }
 
@@ -89,4 +101,6 @@
 .hl-7 { color: var(--hl-7); }
 .hl-8 { color: var(--hl-8); }
 .hl-9 { color: var(--hl-9); }
+.hl-10 { color: var(--hl-10); }
+.hl-11 { color: var(--hl-11); }
 pre, code { background: var(--code-background); }
